--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
-    "ts-node-dev": "^2.0.0"
+    "express-async-handler": "^1.2.0",
+    "ts-node-dev": "^2.0.0",
+    "zod": "^3.23.8"
   }
 }
